--- a/Sprint3/site/index.html
+++ b/Sprint3/site/index.html
@@ -118,7 +118,7 @@
 		
 		<!-- Activities Section Starts -->
 
-		<section class="our-activities" id="activities">
+		<section class="our-activities d-flex" id="activities">
 			<article class="col-md-7" id="textContainer">
 				aza
 			</article>
