--- a/Sprint5/site/index.html
+++ b/Sprint5/site/index.html
@@ -10,7 +10,7 @@
 	
 		<title>ACF2L - Aéroclub de Frotey-lès-Lure</title>
 
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 		<link rel="stylesheet" href="css/slicknav.css">
