--- a/Sprint6/site/index.html
+++ b/Sprint6/site/index.html
@@ -491,6 +491,9 @@
 						</div>
 				</div>
 			</div>
+			<div>
+				<model-viewer src="plane/plane.glb" alt="ULM en 3D"></model-viewer>
+			</div>
 		</section>
 
         <footer class="footer container-fluid ">
@@ -543,6 +546,9 @@
 							<div class="footer-copyright_">
 								<p class="text-sm">Un projet Universitaire de <a href="https://www.linkedin.com/in/yaniswong04" target="_blank" class="fw-bold">Yanis WONG</a>, <a href="https://www.linkedin.com/in/raphaelcadete/" target="_blank">Raphael CADETE</a> et <a href="https://www.linkedin.com/in/hugo-bajoue/" target="_blank">Hugo BAJOUE</a></p>
                             	<p class="text-sm d-block"> Images <a href="https://www.pexels.com/fr-fr/" target="_blank">Pexels</a>, <a target="_blank" href="https://icons8.com/icon/101130/share-2--v1">App</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+								<p class="text-sm d-block">"Plane" par osmosikum est sous licence Creative Commons Attribution 4.0 International License. Pour consulter une copie de cette licence, visitez http://creativecommons.org/licenses/by/4.0/ ou envoyez une lettre à Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.</p>
+								<p class="text-sm d-block">Plane © osmosikum Licensed under CC BY 4.0 <a href="https://sketchfab.com/3d-models/plane-cedc8a07370747f7b0d14400cdf2faf9">link to the model</a> - no change made - <a href="https://creativecommons.org/licenses/by/4.0/">copyright notice -</a> <a href="plane/license.txt"> license notice</a></p>
+								<p class="text-sm d-block">"Plane" (https://skfb.ly/JoXO) by osmosikum is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).</p>
 							</div>
 						</div>
 						<!-- Footer Copyright end -->
@@ -550,7 +556,7 @@
 				</div>
 			</div>
 		</footer>
-		
+		<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
 		<!-- Jquery Library File -->
 		<script src="js/jquery-1.12.4.min.js"></script>
 
