c'est encore yanis

--- a/Sprint6/site/index.html
+++ b/Sprint6/site/index.html
@@ -158,14 +158,14 @@
 					<h2>Nos Véhicules</h2>
 					<p>Voici les différents véhicule mis à votre disposition</p>
 				</div>				
-				<div class=" col-md-12 d-flex justify-content-md-around align-items-start">
+				<div class=" col-md-12 d-flex justify-content-md-around align-items-end">
 					<article class="vehicule d-flex flex-column align-items-center p-0">
-						<div class="vehicule-image w-100"></div>
+						<div id="vehicule-image1" class="w-100"></div>
 						<div class="col-md-12 p-0">
 							<div class="col-md-6 d-flex justify-content-center align-items-center vehicule-name">
 								<p>Autogire</p>
 							</div>
-							<div class="col-md-12 vehicule-text">
+							<div class="col-md-12 vehicule-text text-justify">
 								<p>Venez découvrir nos cours d'autogire qui offrent une expérience aérienne unique où la liberté de planer rencontre la maîtrise totale. Apprenez à piloter ces machines exceptionnelles et découvrez le plaisir de voler en toute sérénité.</p>
 							</div>
 							<hr>
@@ -175,12 +175,12 @@
 						</div>
 					</article>
 					<article class="vehicule d-flex flex-column align-items-center p-0">
-						<div class="vehicule-image w-100"></div>
+						<div id="vehicule-image2" class="w-100"></div>
 						<div class="col-md-12 p-0">
 							<div class="col-md-6 d-flex justify-content-center align-items-center vehicule-name">
 								<p>Multi-axes</p>
 							</div>
-							<div class="col-md-12 vehicule-text">
+							<div class="col-md-12 vehicule-text text-justify">
 								<p>Plongez dans l'univers captivant de l'aviation avec nos cours multi-axes et découvrez la sensation exaltante de piloter un avion à ailes fixes. Des cours dynamiques conçus pour les passionnés de vol qui rêvent de maîtriser les cieux.</p>
 							</div>
 							<hr>
@@ -190,12 +190,12 @@
 						</div>
 					</article>
 					<article class="vehicule d-flex flex-column align-items-center p-0">
-						<div class="vehicule-image w-100"></div>
+						<div id="vehicule-image3" class="w-100"></div>
 						<div class="col-md-12 p-0">
 							<div class="col-md-6 d-flex justify-content-center align-items-center vehicule-name">
 								<p>Pendulaire</p>
 							</div>
-							<div class="col-md-12 vehicule-text">
+							<div class="col-md-12 vehicule-text text-justify">
 								<p>Explorez les cieux d'une manière exceptionnelle avec nos cours de pilotage en pendulaire. Imaginez-vous planant gracieusement à travers le ciel, une expérience unique qui allie la légèreté d'un vol libre avec la maîtrise totale d'un pilote.</p>
 							</div>
 							<hr>
@@ -575,7 +575,7 @@
 		<script src="js/loading.js"></script>
 		<script src="js/cookie.js"></script>
 		<script src="js/abouts-us.js"></script>
-		<script src="js/events-slider"></script>
+		<script src="js/events-slider.js"></script>
 
 	</body>
 </html>
