c'est moi Yanis

--- a/Sprint6/site/index.html
+++ b/Sprint6/site/index.html
@@ -491,8 +491,8 @@
 						</div>
 				</div>
 			</div>
-			<div>
-				<model-viewer src="plane/plane.glb" alt="ULM en 3D"></model-viewer>
+			<div class="d-flex justify-content-center align-items-center">
+				<model-viewer id="mo" camera-controls autoplay src="plane/plane.glb" alt="ULM en 3D"></model-viewer>
 			</div>
 		</section>
 
