coucou c'est yanis

--- a/Sprint6/site/index.html
+++ b/Sprint6/site/index.html
@@ -170,7 +170,7 @@
 							</div>
 							<hr>
 							<div class="col-md-12 d-flex justify-content-end align-items-center">
-								<p class="price">260.00€</p>
+								<p class="price"></p>
 							</div>
 						</div>
 					</article>
@@ -185,7 +185,7 @@
 							</div>
 							<hr>
 							<div class="col-md-12 d-flex justify-content-end align-items-center">
-								<p class="price">380.00€</p>
+								<p class="price"></p>
 							</div>
 						</div>
 					</article>
@@ -200,7 +200,7 @@
 							</div>
 							<hr>
 							<div class="col-md-12 d-flex justify-content-end align-items-center">
-								<p class="price">190.00€</p>
+								<p class="price"></p>
 							</div>
 						</div>
 					</article>
