--- a/Sprint6/site/index.html
+++ b/Sprint6/site/index.html
@@ -207,7 +207,7 @@
 				</div>
 			</div>
 			<div class="d-flex justify-content-center align-items-center">
-				<model-viewer class="mt-5" id="mo" camera-controls   camera-target="0m 97.6m 0m"
+				<model-viewer class="mt-5 border" id="mo" camera-controls   camera-target="0m 97.6m 0m"
 				camera-orbit="-145deg 75deg 2m" autoplay src="plane/plane.glb" alt="ULM en 3D"></model-viewer>
 			</div>
 		</section>
